Fix spacing on personal-tools.

--- a/plonetheme/blueberry/scss/site/portaltop.scss
+++ b/plonetheme/blueberry/scss/site/portaltop.scss
@@ -17,6 +17,7 @@
 
 #portal-personaltools-wrapper {
   float: right;
+  padding-left: $padding-horizontal;
   > ul {
     @include list-horizontal();
   }
